docs(ms6): 模块 README(配置/安装/语义/限制) + R2 延期裁定记档 + MS6 收官记档
Co-Authored-By: Claude <noreply@anthropic.com>